--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -16,6 +17,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lottie-react": "^2.4.0",
+    "mongodb": "^5.6.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
