--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lottie-react": "^2.4.0",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
