--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: 🐞 Bug
 description: File a bug/issue
 title: "[BUG] <title>"
-labels: [Bug, Needs Triage]
+labels: [bug]
 body:
 - type: checkboxes
   attributes:
@@ -33,6 +33,29 @@ body:
       1. See error...
   validations:
     required: false
+- type: dropdown
+  id: version
+  attributes:
+    label: Version
+    description: What version of our software are you running?
+    options:
+      - 1.0.2 (Default)
+      - 1.0.3 (Edge)
+  validations:
+      required: false
+- type: dropdown
+  id: browsers
+  attributes:
+    label: What browsers are you seeing the problem on?
+    multiple: true
+    options:
+       - Firefox
+       - Chrome
+       - Safari
+       - Microsoft Edge
+       - Brave
+    validations:
+      required: false
 - type: textarea
   attributes:
     label: Environment
