--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -14,14 +14,14 @@ body:
   attributes:
     label: Current Behavior
     description: A concise description of what you're experiencing.
-  validations:
-    required: false
+    options:
+      required: false
 - type: textarea
   attributes:
     label: Expected Behavior
     description: A concise description of what you expected to happen.
-  validations:
-    required: false
+    options:   
+      required: false
 - type: textarea
   attributes:
     label: Steps To Reproduce
@@ -31,8 +31,8 @@ body:
       1. With this config...
       1. Run '...'
       1. See error...
-  validations:
-    required: false
+    options:
+      required: false
 - type: dropdown
   id: version
   attributes:
@@ -41,7 +41,6 @@ body:
     options:
       - 1.0.2 (Default)
       - 1.0.3 (Edge)
-  validations:
       required: false
 - type: dropdown
   id: browsers
@@ -54,8 +53,7 @@ body:
        - Safari
        - Microsoft Edge
        - Brave
-  validations:
-     required: false
+       required: false
 - type: textarea
   attributes:
     label: Environment
@@ -69,8 +67,8 @@ body:
         - Node:
         - npm:
     render: markdown
-  validations:
-    required: false
+    options:
+      required: false
 - type: textarea
   attributes:
     label: Anything else?
@@ -78,5 +76,5 @@ body:
       Links? References? Anything that will give us more context about the issue you are encountering!
 
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-  validations:
-    required: false
+    options:
+      required: false
