--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -9,19 +9,20 @@ body:
     description: Please search to see if an issue already exists for the bug you encountered.
     options:
     - label: I have searched the existing issues
-      required: true
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: Current Behavior
     description: A concise description of what you're experiencing.
-    options:
-      required: false
+  validations:
+    required: false
 - type: textarea
   attributes:
     label: Expected Behavior
     description: A concise description of what you expected to happen.
-    options:   
-      required: false
+  validations:
+    required: false
 - type: textarea
   attributes:
     label: Steps To Reproduce
@@ -31,8 +32,8 @@ body:
       1. With this config...
       1. Run '...'
       1. See error...
-    options:
-      required: false
+  validations:
+    required: false
 - type: dropdown
   id: version
   attributes:
@@ -41,7 +42,8 @@ body:
     options:
        - 1.0.2 (Default)
        - 1.0.3 (Edge)
-      required: false
+  validations:
+    required: false
 - type: dropdown
   id: browsers
   attributes:
@@ -53,7 +55,8 @@ body:
        - Safari
        - Microsoft Edge
        - Brave
-       required: false
+  validations:
+    required: false
 - type: textarea
   attributes:
     label: Environment
@@ -67,8 +70,8 @@ body:
         - Node:
         - npm:
     render: markdown
-    options:
-      required: false
+  validations:
+    required: false
 - type: textarea
   attributes:
     label: Anything else?
@@ -76,5 +79,5 @@ body:
       Links? References? Anything that will give us more context about the issue you are encountering!
 
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-    options:
-      required: false
+  validations:
+    required: false
