--- a/.github/workflows/manual_dependabot.yaml
+++ b/.github/workflows/manual_dependabot.yaml
@@ -21,6 +21,7 @@ jobs:
         run: pnpm install
 
       - name: Run Dependabot
+        if: github.actor == 'dependabot[bot]' || github.event_name == 'workflow_dispatch'
         uses: dependabot/fetch-metadata@v1.1.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
