--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","**/*.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","**/*.d.ts", "src/pages/api/auth/[...nextauth].js"],
   "exclude": ["node_modules"]
 }
