--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.12.18",
     "lottie-react": "^2.4.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.2",
