--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "20.4.0",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.44.0",
@@ -27,8 +25,13 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tilt": "^1.0.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6"
   }
 }
