--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.151",
+    "react-tag-input": "^6.8.1",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
@@ -42,6 +44,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-tag-input": "^6.6.1",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "^7.0.26"
   }
