--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -42,10 +43,14 @@
     "@storybook/nextjs": "^7.0.26",
     "@storybook/react": "^7.0.26",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/jest": "^29.5.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-tag-input": "^6.6.1",
     "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.0.26"
+    "jest": "^29.6.1",
+    "storybook": "^7.0.26",
+    "ts-jest": "^29.1.1"
   }
 }
