--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -27,12 +28,12 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-parallax-tilt": "^1.7.151",
+    "react-parallax-tilt": "^1.7.153",
     "react-tag-input": "^6.8.1",
     "react-tag-input-component": "^2.0.2",
-    "react-parallax-tilt": "^1.7.153",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
@@ -43,11 +44,15 @@
     "@storybook/nextjs": "^7.0.26",
     "@storybook/react": "^7.0.26",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@types/react-tag-input": "^6.6.1",
     "@types/react-dom": "18.2.7",
+    "@types/react-tag-input": "^6.6.1",
     "eslint-plugin-storybook": "^0.6.12",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "storybook": "^7.0.26"
   }
 }
