--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "20.4.2",
+    "ai": "^2.1.22",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
@@ -24,6 +25,7 @@
     "mongoose": "^7.3.2",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
+    "openai-edge": "^1.2.0",
     "postcss": "8.4.24",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
