--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ GOOGLE_SECRET="Your OAuth google_secret"
 SECRET="YOUR NEXT_AUTH secret"
 MONGODB_URI="your mongodb cluster uri"
 NEXT_PUBLIC_ADMIN_EMAIL="Your Admin_email"
+OPENAI_API_KEY="Your OpenAI API key"
+
