--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format":"prettier --write \"**/*.{ts,tsx,md,d.ts}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{md,ts,tsx}": [
+      "prettier --write"
+    ],
+    "*.{js,ts,tsx,md}": "eslint"
+  }, 
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "20.5.0",
@@ -58,9 +66,13 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@types/react-tag-input": "^6.6.1",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
+    "lint-staged": "^14.0.0",
+    "prettier": "3.0.2",
     "storybook": "^7.3.1"
   }
 }
