--- a/package.json
+++ b/package.json
@@ -20,19 +20,14 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{md,ts,tsx}": [
+    "*.{md,ts,tsx,js}": [
       "prettier --write"
-    ],
-    "*.{js,ts,tsx,md}": "eslint"
+    ]
   }, 
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@types/node": "20.5.0",
     "ai": "^2.1.34",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.10",
     "framer-motion": "^10.13.1",
     "lottie-react": "^2.4.0",
     "mongodb": "^5.6.0",
@@ -40,7 +35,6 @@
     "next": "13.4.17",
     "next-auth": "^4.23.0",
     "openai-edge": "^1.2.0",
-    "postcss": "8.4.27",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,9 +42,7 @@
     "react-tag-input": "^6.8.1",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
+    "husky": "^8.0.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
@@ -68,11 +60,18 @@
     "@types/react-tag-input": "^6.6.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.13",
-    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^14.0.0",
     "prettier": "3.0.2",
-    "storybook": "^7.3.1"
+    "storybook": "^7.3.1",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.10",
+    "postcss": "8.4.27",
+    "autoprefixer": "10.4.14",
+    "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "5.1.6",
+    "@types/node": "20.5.0"
   }
 }
