--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format":"prettier --write \"**/*.{ts,tsx,md,d.ts}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,md,d.ts}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest --watch",
@@ -23,12 +23,13 @@
     "*.{md,ts,tsx,js}": [
       "prettier --write"
     ]
-  }, 
+  },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "ai": "^2.1.34",
     "axios": "^1.4.0",
     "framer-motion": "^10.13.1",
+    "husky": "^8.0.3",
     "lottie-react": "^2.4.0",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.1",
@@ -39,10 +40,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.156",
+    "react-query": "^3.39.3",
     "react-tag-input": "^6.8.1",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
-    "husky": "^8.0.3"
+    "redis": "^4.6.8"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
@@ -55,6 +57,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/react-tag-input": "^6.6.1",
@@ -71,7 +74,6 @@
     "autoprefixer": "10.4.15",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.6",
-    "@types/node": "20.5.0"
+    "typescript": "5.1.6"
   }
 }
