--- a/package.json
+++ b/package.json
@@ -61,17 +61,18 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/react-tag-input": "^6.6.1",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.10",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^14.0.0",
+    "postcss": "8.4.27",
+    "postcss-nesting": "^12.0.1",
     "prettier": "3.0.2",
     "storybook": "^7.3.1",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.10",
-    "postcss": "8.4.27",
-    "autoprefixer": "10.4.15",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
