reverse proxy using nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream nextjs_upstream {
 }
 
 server {
-  listen 80 default_server;
+  listen 3000 default_server;
 
   server_name _;
 
@@ -38,7 +38,9 @@ server {
   proxy_pass http://nextjs_upstream;
 
   # For testing cache - remove before deploying to production
-  add_header X-Cache-Status $upstream_cache_status;
+  # add_header X-Cache-Status $upstream_cache_status;
+  add_header X-Cache $upstream_cache_status;
+  add_header X-Cache-Status $upstream_status; 
   }
 
   location /public {
@@ -48,7 +50,9 @@ server {
   proxy_pass http://nextjs_upstream;
 
   # For testing cache - remove before deploying to production
-  add_header X-Cache-Status $upstream_cache_status;
+  # add_header X-Cache-Status $upstream_cache_status;
+  add_header X-Cache $upstream_cache_status;
+  add_header X-Cache-Status $upstream_status;
   }
 
   gzip on;
