--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3'
 services:
-  node-app:
+  nextjs:
     build: 
       context: .
       dockerfile: Dockerfile.dev
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     volumes: 
       - /app/node_modules
       - .:/app
+
+  ngnix:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
