--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "13.5.4",
     "next-auth": "^4.24.5",
     "openai-edge": "^1.2.2",
+    "prom-client": "^15.1.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
