--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,19 @@ services:
 
   prom-server:
     image: prom/prometheus
+    container_name: prometheus
+    restart: unless-stopped
     ports:
       - 9090:9090
     volumes:
       - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-oss
+    container_name: grafana
+    restart: unless-stopped
+    ports:  
+      - "3000:3000"
+    volumes:
+      # - grafana-storage:/var/lib/grafana
+      - ./config/custom.ini:/etc/grafana/grafana.ini:ro
