--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-tag-input": "^6.8.1",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "winston": "^3.11.0",
+    "winston-loki": "^6.0.8"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
