--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ SECRET="YOUR NEXT_AUTH secret"
 MONGODB_URI="your mongodb cluster uri"
 NEXT_PUBLIC_ADMIN_EMAIL="Your Admin_email"
 OPENAI_API_KEY="Your OpenAI API key"
+NEXTAUTH_URL="http://localhost:5000"
