--- a/package.json
+++ b/package.json
@@ -1,83 +1,83 @@
 {
-  "name": "project_hub",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=8.0.0",
-    "yarn": ">=1.22.0",
-    "pnpm": ">=7.0.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,d.ts}\"",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "jest --watch",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{md,ts,tsx,js}": [
-      "prettier --write"
-    ]
-  },
-  "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "ai": "^2.2.15",
-    "axios": "^1.6.0",
-    "framer-motion": "^10.16.4",
-    "husky": "^8.0.3",
-    "lottie-react": "^2.4.0",
-    "mongodb": "^5.8.0",
-    "mongoose": "^7.6.3",
-    "next": "13.5.4",
-    "next-auth": "^4.24.5",
-    "openai-edge": "^1.2.2",
-    "prom-client": "^15.1.0",
-    "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-parallax-tilt": "^1.7.156",
-    "react-query": "^3.39.3",
-    "react-tag-input": "^6.8.1",
-    "react-tag-input-component": "^2.0.2",
-    "react-toastify": "^9.1.3",
-    "redis": "^4.6.10",
-    "winston": "^3.11.0",
-    "winston-loki": "^6.0.8"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/blocks": "^7.4.5",
-    "@storybook/nextjs": "^7.2.0",
-    "@storybook/react": "^7.5.1",
-    "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "20.8.3",
-    "@types/react": "18.2.27",
-    "@types/react-dom": "18.2.7",
-    "@types/react-tag-input": "^6.6.2",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^14.0.0",
-    "postcss": "8.4.31",
-    "postcss-nesting": "^12.0.1",
-    "prettier": "3.0.2",
-    "storybook": "^7.3.1",
-    "tailwindcss": "3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
-  }
+    "name": "project_hub",
+    "version": "0.1.0",
+    "private": true,
+    "engines": {
+        "node": ">=20.0.0",
+        "npm": ">=8.0.0",
+        "yarn": ">=1.22.0",
+        "pnpm": ">=7.0.0"
+    },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write \"**/*.{ts,tsx,md,d.ts,json}\"",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "test": "jest --watch",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "*.{md,ts,tsx,js,json}": [
+            "prettier --write"
+        ]
+    },
+    "dependencies": {
+        "@next-auth/mongodb-adapter": "^1.1.3",
+        "ai": "^2.2.15",
+        "axios": "^1.6.0",
+        "framer-motion": "^10.16.4",
+        "husky": "^8.0.3",
+        "lottie-react": "^2.4.0",
+        "mongodb": "^5.8.0",
+        "mongoose": "^7.6.3",
+        "next": "13.5.4",
+        "next-auth": "^4.24.5",
+        "openai-edge": "^1.2.2",
+        "prom-client": "^15.1.0",
+        "prop-types": "^15.8.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-parallax-tilt": "^1.7.156",
+        "react-query": "^3.39.3",
+        "react-tag-input": "^6.8.1",
+        "react-tag-input-component": "^2.0.2",
+        "react-toastify": "^9.1.3",
+        "redis": "^4.6.10",
+        "winston": "^3.11.0",
+        "winston-loki": "^6.0.8"
+    },
+    "devDependencies": {
+        "@storybook/addon-essentials": "^7.1.1",
+        "@storybook/addon-interactions": "^7.5.1",
+        "@storybook/addon-links": "^7.4.6",
+        "@storybook/blocks": "^7.4.5",
+        "@storybook/nextjs": "^7.2.0",
+        "@storybook/react": "^7.5.1",
+        "@storybook/testing-library": "^0.2.2",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
+        "@types/node": "20.8.3",
+        "@types/react": "18.2.27",
+        "@types/react-dom": "18.2.7",
+        "@types/react-tag-input": "^6.6.2",
+        "autoprefixer": "10.4.16",
+        "eslint": "8.50.0",
+        "eslint-config-next": "13.5.4",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-storybook": "^0.6.13",
+        "jest": "^29.6.1",
+        "jest-environment-jsdom": "^29.7.0",
+        "lint-staged": "^14.0.0",
+        "postcss": "8.4.31",
+        "postcss-nesting": "^12.0.1",
+        "prettier": "3.0.2",
+        "storybook": "^7.3.1",
+        "tailwindcss": "3.3.3",
+        "ts-node": "^10.9.1",
+        "typescript": "5.2.2"
+    }
 }
