--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@next-auth/mongodb-adapter": "^1.1.3",
+        "@vercel/speed-insights": "^1.0.7",
         "ai": "^2.2.15",
         "axios": "^1.6.0",
         "framer-motion": "^10.16.4",
