--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "storybook": "^7.3.1",
         "tailwindcss": "3.3.3",
         "ts-node": "^10.9.1",
-        "typescript": "5.2.2"
+        "typescript": "5.2.2",
+        "husky": "^8.0.0"
     }
 }
