--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     },
     "dependencies": {
         "@next-auth/mongodb-adapter": "^1.1.3",
+        "@tsparticles/engine": "^3.2.1",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.2.1",
         "@vercel/speed-insights": "^1.0.7",
         "ai": "^2.2.15",
         "axios": "^1.6.0",
+        "clsx": "^2.1.0",
         "framer-motion": "^10.16.4",
         "husky": "^8.0.3",
         "lottie-react": "^2.4.0",
@@ -47,6 +51,7 @@
         "react-tag-input-component": "^2.0.2",
         "react-toastify": "^9.1.3",
         "redis": "^4.6.10",
+        "tailwind-merge": "^2.2.1",
         "winston": "^3.11.0",
         "winston-loki": "^6.0.8"
     },
@@ -70,6 +75,7 @@
         "eslint-config-next": "13.5.4",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-storybook": "^0.6.13",
+        "husky": "^8.0.0",
         "jest": "^29.6.1",
         "jest-environment-jsdom": "^29.7.0",
         "lint-staged": "^14.0.0",
@@ -79,7 +85,6 @@
         "storybook": "^7.3.1",
         "tailwindcss": "3.3.3",
         "ts-node": "^10.9.1",
-        "typescript": "5.2.2",
-        "husky": "^8.0.0"
+        "typescript": "5.2.2"
     }
 }
