--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         ]
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
         "@next-auth/mongodb-adapter": "^1.1.3",
         "@tsparticles/engine": "^3.2.1",
         "@tsparticles/react": "^3.0.0",
@@ -45,6 +46,7 @@
         "prop-types": "^15.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^5.3.0",
         "react-parallax-tilt": "^1.7.156",
         "react-query": "^3.39.3",
         "react-tag-input": "^6.8.1",
