--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@vercel/speed-insights": "^1.0.7",
         "ai": "^2.2.15",
         "axios": "^1.7.4",
+        "chart.js": "^4.4.4",
         "clsx": "^2.1.0",
         "framer-motion": "^10.16.4",
         "husky": "^8.0.3",
@@ -45,6 +46,7 @@
         "prom-client": "^15.1.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^5.3.0",
         "react-parallax-tilt": "^1.7.156",
