--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "axios": "^1.7.7",
         "chart.js": "^4.4.4",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^10.18.0",
         "husky": "^8.0.3",
         "lottie-react": "^2.4.0",
@@ -69,6 +70,7 @@
         "@storybook/testing-library": "^0.2.2",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^14.3.1",
+        "@types/date-fns": "^2.6.3",
         "@types/jest": "^29.5.13",
         "@types/node": "20.8.3",
         "@types/react": "18.2.27",
