--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "mongodb": "^5.9.2",
         "mongoose": "^7.8.2",
         "next": "14.2.10",
-        "next-auth": "^4.24.8",
+        "next-auth": "^5.0.0-beta.29",
         "openai-edge": "^1.2.2",
         "prom-client": "^15.1.3",
         "prop-types": "^15.8.1",
