--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         ]
     },
     "dependencies": {
+        "@ai-sdk/openai": "^1.3.23",
         "@heroicons/react": "^2.1.5",
         "@next-auth/mongodb-adapter": "^1.1.3",
         "@tsparticles/engine": "^3.5.0",
