--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "node": ">=20.0.0",
         "npm": ">=8.0.0",
         "yarn": ">=1.22.0",
-        "pnpm": ">=7.0.0"
+        "pnpm": ">=7.0.0",
+        "bun": ">=0.1.0"
     },
     "scripts": {
         "dev": "next dev",
@@ -43,7 +44,6 @@
         "mongoose": "^7.8.2",
         "next": "14.2.10",
         "next-auth": "^5.0.0-beta.29",
-        "openai-edge": "^1.2.2",
         "prom-client": "^15.1.3",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
