--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
         "lottie-react": "^2.4.0",
         "mongodb": "^5.9.2",
         "mongoose": "^7.8.2",
-        "next": "14.2.10",
+        "next": "^15.4.4",
         "next-auth": "^5.0.0-beta.29",
         "prom-client": "^15.1.3",
         "prop-types": "^15.8.1",
-        "react": "18.2.0",
+        "react": "^19.1.1",
         "react-chartjs-2": "^5.2.0",
-        "react-dom": "18.2.0",
+        "react-dom": "^19.1.1",
         "react-icons": "^5.3.0",
         "react-parallax-tilt": "^1.7.245",
         "react-query": "^3.39.3",
