--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.1.12",
         "@tabler/icons-react": "^3.34.1",
+        "@tanstack/react-query": "^5.85.0",
         "ai": "^5.0.10",
         "axios": "^1.11.0",
         "better-auth": "^1.3.5",
@@ -59,6 +60,7 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@tanstack/eslint-plugin-query": "^5.83.1",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
