--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-scroll-area": "^1.2.9",
         "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.1.12",
@@ -39,7 +40,7 @@
         "iconsax-reactjs": "^0.0.8",
         "install": "^0.13.0",
         "lottie-react": "^2.4.1",
-        "lucide-react": "^0.536.0",
+        "lucide-react": "^0.539.0",
         "match-sorter": "^8.1.0",
         "mongodb": "^6.18.0",
         "mongoose": "^8.17.1",
