--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     },
     "dependencies": {
         "@faker-js/faker": "^9.9.0",
+        "@hookform/resolvers": "^5.2.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-scroll-area": "^1.2.9",
         "@radix-ui/react-select": "^2.2.5",
@@ -29,6 +31,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.1.12",
+        "@radix-ui/react-tooltip": "^1.2.7",
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-query": "^5.85.0",
         "ai": "^5.0.10",
@@ -51,6 +54,7 @@
         "prom-client": "^15.1.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-hook-form": "^7.62.0",
         "react-icons": "^5.5.0",
         "recharts": "2.15.4",
         "standard-version": "^9.5.0",
