--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
         "react-is": "^19.0.0-rc-69d4b800-20241021"
     },
     "dependencies": {
-        "@faker-js/faker": "^9.9.0",
-        "@hookform/resolvers": "^5.2.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-label": "^2.1.7",
@@ -33,8 +31,8 @@
         "@radix-ui/react-tabs": "^1.1.12",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@tabler/icons-react": "^3.34.1",
+        "@tanstack/react-form": "^1.19.1",
         "@tanstack/react-query": "^5.85.0",
-        "ai": "^5.0.10",
         "axios": "^1.11.0",
         "better-auth": "^1.3.5",
         "class-variance-authority": "^0.7.1",
@@ -54,7 +52,6 @@
         "prom-client": "^15.1.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "react-hook-form": "^7.62.0",
         "react-icons": "^5.5.0",
         "recharts": "2.15.4",
         "standard-version": "^9.5.0",
