refactor: consistent ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        ".next/types/**/*.ts",
-        "migrateProject.js"
-    ],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "migrateProject.js"],
     "exclude": ["node_modules"]
 }
