feat: github webhook

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-is": "^19.0.0-rc-69d4b800-20241021"
     },
     "dependencies": {
+        "@google/genai": "^1.15.0",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
